# beepee

./: Cargo.toml  Dockerfile  config.toml
.github/workflows/: build.yml  build_debug.yml  build_release.yml
cicd/: check_templates_statics.py
contrib/: beepee.service  sample-config.toml
db/: sample_body_temperature_locations.sql  schema.sql
src/: config.rs  database.rs  datetime.rs  filters.rs  main.rs  model.rs  numerism.rs  ser_de.rs  templating.rs
static/: beepee.js  beepee.js.map  beepee.ts  style.css  tsconfig.json
templates/: 400.html  400.html.tera  403.html  403.html.tera  403_ro.html  403_ro.html.tera  404.html  404.html.tera  405.html  405.html.tera  base.html  base.html.tera  list.html  list.html.tera  list_macros.html  list_macros.tera  long_term_sugar_list.html  mass_list.html  mass_list.html.tera  redirect.html  redirect.html.tera  sugar_list.html  sugar_list.html.tera  temperature_list.html  temperature_list.html.tera
